[profile.release]
panic = 'unwind'
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1

[workspace]
resolver = "2"
members = [
    'nostr-crypto',
    'nostr-surreal-db',
    'nostr-relay',
    "nostr-client-plus",
    "nostr-plus-common",
]

[workspace.dependencies]
alloy-primitives = { version = "0.6", features = ["serde"] }
axum = { version = "0.7", features = ["ws"]}
nostr-crypto = { path = "./nostr-crypto" }
nostr-plus-common = { path = "./nostr-plus-common" }
nostr-surreal-db = { path = "./nostr-surreal-db" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1"

log = "0.4"
env_logger = "0.11"

rand = "0.8"
rand_core = "0.6"

hex = { version = "0.4.3", features = ["serde"] }
num = "0.4"

k256 = {  version = "0.13.3", features = ["serde"] }

tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
