[package]
name = "nostr-plus-common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
nostr-crypto = { workspace = true }
num = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
