[package]
name = "nostr-relay"
version = "0.1.0"
authors = ["Song Z <songz@duck.com>"]
edition = "2021"
description = "utility on ethereum for Mizu"
readme = "README.md"
repository = "https://github.com/"
license-file = "LICENSE"

[dependencies]
anyhow = { workspace = true }
common-private = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
rand = { workspace = true }

axum = { workspace = true }
axum-extra = { version = "0.9", features = ["typed-header"]}
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
nostr-crypto = { workspace = true }
nostr-plus-common = { workspace = true}
nostr-surreal-db = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
serial_test = "3.1.1"

[features]
default = []
