[package]
name = "nostr-surreal-db"
version = "0.1.0"
authors = ["Song Z <songz@duck.com>"]
edition = "2021"
description = "utility on ethereum for Mizu"
readme = "README.md"
repository = "https://github.com/"
license-file = "LICENSE"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
alloy-primitives = { workspace = true }

serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4.23"

nostr-crypto = { workspace = true }
nostr-plus-common = { workspace = true }
surrealdb = { version = "1.3" }

[features]
default = []